03-istio/02-service-resilliency/destination-rule-lb.yaml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: nginx-svc
spec:
  host: nginx-svc.dialog.svc.cluster.local
  subsets: ## Pod labels. We group them here
  - labels:
      version: v1
    name: v1
  - labels:
      version: v2
    name: v2
  trafficPolicy:
    loadBalancer:
      simple: RANDOM
